<resources>
    <string name="app_name" translatable="false">"MTG Familiar"</string>
    <string name="name_search_hint">"Search Names"</string>
    <string name="dialog_ok">"OK"</string>
    <string name="dialog_cancel">"Cancel"</string>
    <string name="dialog_yes">"Yes"</string>
    <string name="dialog_no">"No"</string>
    <string name="dialog_done">"Done"</string>
    <string name="dialog_both">"Both"</string>
    <string name="dialog_life">"Life"</string>
    <string name="dialog_thanks">"Thanks!"</string>
    <string name="dialog_enjoy">"Enjoy!"</string>
    <string name="update_notification">"Checking for database updates"</string>
    <string name="update_updating_set">"Adding %s"</string>
    <string name="update_updating_cards">Updating Cards</string>
    <string name="update_updating_rules">"Updating Comprehensive Rules"</string>
    <string name="update_updating_docs">"Updating Judge Docs"</string>
    <string name="update_added">"Added"</string>
    <string name="update_added_rules">"new comprehensive rules"</string>
    <string name="update_added_mtr">"new Magic Tournament Rules"</string>
    <string name="update_added_ipg">"new Infraction Procedure Guide"</string>
    <string name="update_added_jar">"new Judging at Regular"</string>
    <string name="update_added_dmtr">"new Digital Magic Tournament Rules"</string>
    <string name="update_added_dipg">"new Digital Infraction Procedure Guide"</string>
    <string name="error_database">"A database error occurred. If it persists, try clearing the app data from the Android settings menu."</string>
    <string name="error_no_email_client">"It does not appear that you have an active email client installed. Please configure an email application."</string>
    <string name="toast_no_card">"No card found with that name."</string>
    <string name="not_deleted">"not deleted"</string>
    <string name="no_network">"Network is not available"</string>
    <string name="filter_title_view_card">"View Card"</string>
    <string name="price_error_unknown">"Error fetching price"</string>
    <string name="price_error_network">"Error fetching price [network]"</string>
    <string name="price_error_api_key">"Error fetching price [API keys]"</string>
    <string name="price_error_online_only">"Card is online only"</string>
    <string name="price_error_null">Error fetching price [null]</string>
    <string name="main_pages">"PAGES"</string>
    <string name="main_extras">"EXTRAS"</string>
    <string name="main_card_search">"Card Search"</string>
    <string name="main_life_counter">"Life Counter"</string>
    <string name="main_mana_pool">"Mana Pool"</string>
    <string name="main_dice">"Dice"</string>
    <string name="main_trade">"Trade Cards"</string>
    <string name="main_wishlist">"Wishlist"</string>
    <string name="main_timer">"Round Timer"</string>
    <string name="main_rules">"Rules"</string>
    <string name="main_judges_corner">"Judge's Corner"</string>
    <string name="main_mojhosto">"MoJhoSto Basic"</string>
    <string name="main_decklist">"Deck Builder"</string>
    <string name="main_force_update_title">"Force Update"</string>
    <string name="main_settings_title">"Settings"</string>
    <string name="main_whats_new_title">"What's New"</string>
    <string name="main_whats_new_in_title">"What's New in Version"</string>
    <string name="main_whats_new_text" translatable="false">"&lt;a href="https://github.com/AEFeinstein/mtg-familiar/releases/tag/v3.9.16"&gt;Changelog&lt;/a&gt;"</string>
    <string name="main_tts_warning_title">"Text-to-Speech"</string>
    <string name="main_tts_warning_text">"This application has text-to-speech capability for some of its features, but you don't seem to have it installed. If you want to install it, use the Install Text-to-Speech link in the settings menu."</string>
    <string name="main_export_data_title">"Save Data to SD"</string>
    <string name="main_export_success">"Successfully saved data to"</string>
    <string name="main_export_fail">"Failed to save data to SD card"</string>
    <string name="main_import_data_title">"Load Data from SD"</string>
    <string name="main_import_success">"Load succeeded"</string>
    <string name="main_import_fail">"Load failed. Please put %1$s in %2$s"</string>
    <string name="main_about">"About"</string>
    <string name="main_about_text">"This app is my gift to the MTG community.&lt;br&gt;
&lt;br&gt;
Please send questions, comments, concerns, and praise to &lt;a href=mailto:mtg.familiar@gmail.com&gt;mtg.familiar@gmail.com&lt;/a&gt;.&lt;br&gt;
&lt;br&gt;
Join the &lt;a href=https://github.com/AEFeinstein/mtg-familiar&gt;open source project&lt;/a&gt; on GitHub.&lt;br&gt;
&lt;br&gt;
Thanks to all the contributors including, but not limited to, jfeinstein10, zagaberoo, April King, Toastdeib, Reuben Kreigel, Lotier, Daniel Lawrence, Devin Collins, Ian Kenley, XVicarious, gopat, mattdiener, and bcGiR.&lt;br&gt;
&lt;br&gt;
Thanks to all the translators including, but not limited to, Michal Ďurovič, Ghislain, Piotr, Víctor, Emilio, Alan, Jacopo, and Sebastian.&lt;br&gt;
&lt;br&gt;
Thanks to all those who manage data sources including, but not limited to, Ryan Stapleton (&lt;a href=http://www.bluewizard.net/Bluewizards_Tower/Home_Page.html&gt;Bluewizard.net&lt;/a&gt;) and Chedy Hampson (&lt;a href=http://tcgplayer.com&gt;TCGPlayer.com&lt;/a&gt;).&lt;br&gt;
&lt;br&gt;
Thanks to reddit's &lt;a href=http://www.reddit.com/r/magicTCG/&gt;/r/magictcg&lt;/a&gt; for testing and feedback.&lt;br&gt;
&lt;br&gt;
Special thanks to Richard Garfield and the rest of the folks at &lt;a href=http://www.wizards.com/magic&gt;Wizards of the Coast&lt;/a&gt;.&lt;br&gt;
&lt;br&gt;
-gelakinetic&lt;br&gt;
&lt;br&gt;
Magic the Gathering and Magic the Gathering cards are ™ &amp; © Wizards of the Coast LLC.&lt;br&gt;
&lt;br&gt;
&lt;a href=https://github.com/NYTimes/Store&gt;NYTimes's Store&lt;/a&gt; used under the Apache License, Version 2.0&lt;/a&gt;.&lt;br&gt;
&lt;br&gt;
&lt;a href=https://github.com/derekbrameyer/android-betterpickers&gt;BetterPickers&lt;/a&gt; used under the Apache License, Version 2.0&lt;/a&gt;.&lt;br&gt;
&lt;br&gt;
&lt;a href=https://github.com/jpardogo/PagerSlidingTabStrip&gt;PagerSlidingTabStrip&lt;/a&gt; used under the Apache License, Version 2.0&lt;/a&gt;.&lt;br&gt;
&lt;br&gt;
&lt;a href=https://github.com/woxblom/DragListView&gt;DragListView&lt;/a&gt; used under the Apache License, Version 2.0&lt;/a&gt;.&lt;br&gt;
&lt;br&gt;
&lt;a href=https://github.com/splitwise/TokenAutoComplete&gt;TokenAutoComplete&lt;/a&gt; used under the Apache License, Version 2.0&lt;/a&gt;.&lt;br&gt;
&lt;br&gt;
&lt;a href=https://github.com/castorflex/SmoothProgressBar&gt;SmoothProgressBar&lt;/a&gt; used under the Apache License, Version 2.0&lt;/a&gt;.&lt;br&gt;
&lt;br&gt;
&lt;a href=https://github.com/PhilJay/MPAndroidChart&gt;MPAndroidChart&lt;/a&gt; used under the Apache License, Version 2.0&lt;/a&gt;.&lt;br&gt;
&lt;br&gt;
&lt;a href=https://github.com/bumptech/glide&gt;Glide&lt;/a&gt; used under the BSD, part MIT, and Apache License, Version 2.0&lt;/a&gt;.&lt;br&gt;
&lt;br&gt;
Program licenced under the &lt;a href=http://www.gnu.org/licenses/gpl.html&gt;GNU General Public License v3+&lt;/a&gt;.&lt;br&gt;
&lt;br&gt;
Media licenced under the &lt;a href=http://creativecommons.org/licenses/by-sa/3.0/&gt;Creative Commons Attribution-ShareAlike 3.0 Unported License&lt;a&gt;.&lt;br&gt;
"</string>
    <string name="main_drawer_open">"Open navigation drawer"</string>
    <string name="main_drawer_close">"Close navigation drawer"</string>
    <string name="main_install_tts">"Install TTS"</string>
    <string name="main_export_no_data">"No data to save"</string>
    <string name="search_name">"Name"</string>
    <string name="search_supertype">"(Super)Type"</string>
    <string name="search_subtype">"Subtype"</string>
    <string name="search_text">"Text"</string>
    <string name="search_power">"Power"</string>
    <string name="search_toughness">"Toughness"</string>
    <string name="search_cmc">"Mana Value"</string>
    <string name="Equals">"Equals"</string>
    <string name="DoesNotEqual">"Is Not Equal"</string>
    <string name="Contains">"Contains"</string>
    <string name="DoesNotContain">"Does Not Contain"</string>
    <string name="NoComparison">"No Comparison"</string>
    <string name="search_set">"Set"</string>
    <string name="search_sets">"Sets"</string>
    <string name="search_format">"Format"</string>
    <string name="search_formats">"Formats"</string>
    <string name="search_rarity">"Rarity"</string>
    <string name="search_rarities">"Rarities"</string>
    <string name="search_flavor_text">"Flavor Text"</string>
    <string name="search_artist">"Artist"</string>
    <string name="search_watermark">Watermark</string>
    <string name="search_search">"Search!"</string>
    <string name="search_randomize">"Randomize!"</string>
    <string name="search_clear_fields">"Clear Fields"</string>
    <string name="search_save_defaults">"Save Defaults"</string>
    <string name="search_load_defaults">"Load Defaults"</string>
    <string name="search_toast_no_results">"No search results found."</string>
    <plurals name="search_toast_results">
        <item quantity="one">"%1$d search results found."</item>
        <item quantity="other">"%1$d search results found."</item>
    </plurals>
    <string name="result_list_Add_to_decklist">"Add to Deck"</string>
    <string name="result_list_Add_to_wishlist">"Add to Wishlist"</string>
    <string name="card_view_image">"Card Image"</string>
    <string name="card_view_price">"Card Price"</string>
    <string name="card_view_change_set">"Change Set"</string>
    <string name="card_view_legality">"Legality"</string>
    <string name="card_view_rulings">"Card Rulings"</string>
    <string name="card_view_share_card">"Share Card"</string>
    <string name="card_view_translated_dialog_title">"Translated Card Name"</string>
    <string name="life_counter_announce_life">"Announce Life Totals"</string>
    <string name="life_counter_change_default_gathering">"Edit Gatherings"</string>
    <string name="life_counter_set_gathering">"Load a Gathering"</string>
    <string name="life_counter_change_display">"Change Display Mode"</string>
    <string name="life_counter_remove_player">"Remove a Player"</string>
    <string name="life_counter_add_player">"Add a Player"</string>
    <string name="gathering_save">"Save Gathering"</string>
    <string name="gathering_load">"Load Gathering"</string>
    <string name="gathering_delete">"Delete Gathering"</string>
    <string name="trader_edit_dialog_remove">"Remove"</string>
    <string name="trader_edit_dialog_reset_price">"Reset Price"</string>
    <string name="trader_edit_dialog_info">"Card Info"</string>
    <string name="wishlist_set_pricing">"Set Pricing Option"</string>
    <string name="wishlist_share">"Share Wishlist"</string>
    <string name="wishlist_sort">"Sort Wishlist"</string>
    <string name="pref_fifteen_minutes_title">"15-Minute Warning"</string>
    <string name="pref_ten_minutes_title">"10-Minute Warning"</string>
    <string name="pref_five_minutes_title">"5-Minute Warning"</string>
    <string name="pref_two_minutes_title">"2-Minute Warning"</string>
    <string name="pref_use_sound_instead_of_tts">Use sound instead of TTS</string>
    <string name="decklist_delete">"Delete Deck"</string>
    <string name="decklist_save">"Save Deck"</string>
    <string name="decklist_load">"Load Deck"</string>
    <string name="decklist_clear">"Clear Deck"</string>
    <string name="decklist_share">"Share Deck"</string>
    <string name="import_start">"Import"</string>
    <string name="import_deck_name_hint">"Deck name"</string>
    <string name="import_paste_hint">"paste deck here. Supported formats are TCGplayer export, MTGO, Arena (official set codes only), .dec"</string>
    <string name="down">Down</string>
    <string name="up">Up</string>
</resources>