<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item android:title="@string/decklist_clear"
        android:id="@+id/deck_menu_clear"
        android:icon="?attr/ic_menu_close" />
    <item android:title="@string/decklist_save"
        android:id="@+id/deck_menu_save"
        android:icon="?attr/ic_menu_save" />
    <item android:title="@string/decklist_load"
        android:id="@+id/deck_menu_load"
        android:icon="?attr/ic_menu_folder_open" />
    <item android:title="@string/decklist_delete"
        android:id="@+id/deck_menu_delete"
        android:icon="?attr/ic_menu_delete" />
    <item android:title="@string/decklist_share"
        android:icon="?attr/ic_menu_share"
        android:id="@+id/deck_menu_share" />
</menu>