<?xml version="1.0" encoding="utf-8"?><!--
  ~ Copyright 2017 Adam Feinstein
  ~
  ~ This file is part of MTG Familiar.
  ~
  ~ MTG Familiar is free software: you can redistribute it and/or modify
  ~ it under the terms of the GNU General Public License as published by
  ~ the Free Software Foundation, either version 3 of the License, or
  ~ (at your option) any later version.
  ~
  ~ MTG Familiar is distributed in the hope that it will be useful,
  ~ but WITHOUT ANY WARRANTY; without even the implied warranty of
  ~ MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  ~ GNU General Public License for more details.
  ~
  ~ You should have received a copy of the GNU General Public License
  ~ along with MTG Familiar.  If not, see <http://www.gnu.org/licenses/>.
  -->
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/image"
        android:icon="@drawable/ic_menu_card_image"
        android:title="@string/card_view_image"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/price"
        android:icon="@drawable/ic_menu_price"
        android:title="@string/card_view_price"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/changeset"
        android:icon="@drawable/ic_menu_change_set"
        android:title="@string/card_view_change_set"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/cardrulings"
        android:icon="@drawable/ic_menu_rules"
        android:title="@string/card_view_rulings"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/addtowishlist"
        android:icon="@drawable/ic_menu_wishlist"
        android:title="@string/result_list_Add_to_wishlist"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/addtodecklist"
        android:icon="@drawable/ic_menu_decklist"
        android:title="@string/result_list_Add_to_decklist"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/legality"
        android:icon="@drawable/ic_menu_legality"
        android:title="@string/card_view_legality"
        app:showAsAction="ifRoom" />
    <item
        android:title="@string/card_view_share_card"
        android:id="@+id/sharecard"
        android:icon="@drawable/ic_menu_share"
        app:showAsAction="ifRoom" />
    <item
        android:title="@string/card_view_translated_dialog_title"
        android:id="@+id/translatecard"
        android:icon="@drawable/ic_menu_translate"
        app:showAsAction="ifRoom" />
</menu>
