<?xml version="1.0" encoding="utf-8"?><!--
Copyright 2011 Adam Feinstein and April King.

This file is part of MTG Familiar.

MTG Familiar is free software: you can redistribute it and/or modify
it under the terms of the GNU General Public License as published by
the Free Software Foundation, either version 3 of the License, or
(at your option) any later version.

MTG Familiar is distributed in the hope that it will be useful,
but WITHOUT ANY WARRANTY; without even the implied warranty of
MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
GNU General Public License for more details.

You should have received a copy of the GNU General Public License
along with MTG Familiar.  If not, see <http://www.gnu.org/licenses/>.
-->
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/add_player"
        android:icon="?attr/ic_menu_person_add"
        android:title="@string/life_counter_add_player"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/remove_player"
        android:icon="?attr/ic_menu_person_remove"
        android:title="@string/life_counter_remove_player"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/display_mode"
        android:icon="?attr/ic_menu_grid"
        android:title="@string/life_counter_change_display"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/set_gathering"
        android:icon="?attr/ic_menu_group"
        android:title="@string/life_counter_set_gathering"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/edit_gatherings"
        android:icon="?attr/ic_menu_group_add"
        android:title="@string/life_counter_change_default_gathering"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/announce_life"
        android:icon="?attr/ic_menu_volume_up"
        android:title="@string/life_counter_announce_life"
        app:showAsAction="ifRoom" />

</menu>
