<?xml version="1.0" encoding="utf-8"?><!--
  ~ Copyright 2017 Adam Feinstein
  ~
  ~ This file is part of MTG Familiar.
  ~
  ~ MTG Familiar is free software: you can redistribute it and/or modify
  ~ it under the terms of the GNU General Public License as published by
  ~ the Free Software Foundation, either version 3 of the License, or
  ~ (at your option) any later version.
  ~
  ~ MTG Familiar is distributed in the hope that it will be useful,
  ~ but WITHOUT ANY WARRANTY; without even the implied warranty of
  ~ MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  ~ GNU General Public License for more details.
  ~
  ~ You should have received a copy of the GNU General Public License
  ~ along with MTG Familiar.  If not, see <http://www.gnu.org/licenses/>.
  -->

<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/save_gathering"
        android:icon="@drawable/ic_menu_save"
        android:title="@string/gathering_save"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/load_gathering"
        android:icon="@drawable/ic_menu_folder_open"
        android:title="@string/gathering_load"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/delete_gathering"
        android:icon="@drawable/ic_menu_delete"
        android:title="@string/gathering_delete"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/add_player"
        android:icon="@drawable/ic_menu_person_add"
        android:title="@string/life_counter_add_player"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/remove_player"
        android:icon="@drawable/ic_menu_person_remove"
        android:title="@string/life_counter_remove_player"
        app:showAsAction="ifRoom" />

</menu>
