<?xml version="1.0" encoding="utf-8"?><!--
  ~ Copyright 2017 Adam Feinstein
  ~
  ~ This file is part of MTG Familiar.
  ~
  ~ MTG Familiar is free software: you can redistribute it and/or modify
  ~ it under the terms of the GNU General Public License as published by
  ~ the Free Software Foundation, either version 3 of the License, or
  ~ (at your option) any later version.
  ~
  ~ MTG Familiar is distributed in the hope that it will be useful,
  ~ but WITHOUT ANY WARRANTY; without even the implied warranty of
  ~ MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  ~ GNU General Public License for more details.
  ~
  ~ You should have received a copy of the GNU General Public License
  ~ along with MTG Familiar.  If not, see <http://www.gnu.org/licenses/>.
  -->

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="4dp"
    android:paddingLeft="16dp"
    android:paddingRight="16dp"
    android:paddingTop="4dp">

    <CheckBox
        android:id="@+id/timer_pref_fifteen"
        style="@style/text.medium"
        android:layout_width="fill_parent"
        android:layout_height="48dp"
        android:checked="false"
        android:text="@string/pref_fifteen_minutes_title" />

    <CheckBox
        android:id="@+id/timer_pref_ten"
        style="@style/text.medium"
        android:layout_width="fill_parent"
        android:layout_height="48dp"
        android:text="@string/pref_ten_minutes_title" />

    <CheckBox
        android:id="@+id/timer_pref_five"
        style="@style/text.medium"
        android:layout_width="fill_parent"
        android:layout_height="48dp"
        android:text="@string/pref_five_minutes_title" />

    <CheckBox
        android:id="@+id/timer_pref_two"
        style="@style/text.medium"
        android:layout_width="fill_parent"
        android:layout_height="48dp"
        android:text="@string/pref_two_minutes_title" />

    <CheckBox
        android:id="@+id/timer_use_sound_instead_of_tts"
        style="@style/text.medium"
        android:layout_width="fill_parent"
        android:layout_height="48dp"
        android:text="@string/pref_use_sound_instead_of_tts" />

</LinearLayout>