<?xml version="1.0" encoding="utf-8"?><!--
Copyright 2011 Adam Feinstein and April King.

This file is part of MTG Familiar.

MTG Familiar is free software: you can redistribute it and/or modify
it under the terms of the GNU General Public License as published by
the Free Software Foundation, either version 3 of the License, or
(at your option) any later version.

MTG Familiar is distributed in the hope that it will be useful,
but WITHOUT ANY WARRANTY; without even the implied warranty of
MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
GNU General Public License for more details.

You should have received a copy of the GNU General Public License
along with MTG Familiar.  If not, see <http://www.gnu.org/licenses/>.
-->
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/wishlist_menu_clear"
        android:icon="?attr/ic_menu_close"
        android:title="@string/wishlist_clear_fields"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/wishlist_menu_settings"
        android:icon="?attr/ic_menu_import_export"
        android:title="@string/wishlist_set_pricing"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/wishlist_menu_sort"
        android:icon="?attr/ic_menu_sort"
        android:title="@string/wishlist_sort"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/wishlist_menu_share"
        android:icon="?attr/ic_menu_share"
        android:title="@string/wishlist_share"
        app:showAsAction="ifRoom" />

</menu>
