<?xml version="1.0" encoding="utf-8"?><!--
  ~ Copyright 2017 Adam Feinstein
  ~
  ~ This file is part of MTG Familiar.
  ~
  ~ MTG Familiar is free software: you can redistribute it and/or modify
  ~ it under the terms of the GNU General Public License as published by
  ~ the Free Software Foundation, either version 3 of the License, or
  ~ (at your option) any later version.
  ~
  ~ MTG Familiar is distributed in the hope that it will be useful,
  ~ but WITHOUT ANY WARRANTY; without even the implied warranty of
  ~ MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  ~ GNU General Public License for more details.
  ~
  ~ You should have received a copy of the GNU General Public License
  ~ along with MTG Familiar.  If not, see <http://www.gnu.org/licenses/>.
  -->

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="top"
    android:baselineAligned="false"
    android:orientation="vertical">

    <EditText
        android:id="@+id/import_editText"
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:gravity="top"
        android:hint="@string/import_paste_hint"
        android:importantForAutofill="no"
        android:inputType="text" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="?attr/color_drawer_divider_item" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/importName"
            style="@style/text.medium"
            android:layout_width="0dp"
            android:layout_height="48dp"
            android:layout_gravity="center_vertical"
            android:layout_weight="2"
            android:hint="@string/import_deck_name_hint"
            android:importantForAutofill="no"
            android:inputType="text"
            android:maxLines="1"
            android:paddingLeft="10dp"
            android:paddingEnd="10dp"
            android:paddingRight="10dp"
            android:selectAllOnFocus="true" />

        <View
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:background="?attr/colorPrimary_attr" />

        <Button
            android:id="@+id/start"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="0dp"
            android:layout_height="48dp"
            android:layout_weight="1"
            android:text="@string/import_start"
            android:textStyle="bold" />

    </LinearLayout>

</LinearLayout>