<?xml version="1.0" encoding="utf-8"?><!--
  ~ Copyright 2017 Adam Feinstein
  ~
  ~ This file is part of MTG Familiar.
  ~
  ~ MTG Familiar is free software: you can redistribute it and/or modify
  ~ it under the terms of the GNU General Public License as published by
  ~ the Free Software Foundation, either version 3 of the License, or
  ~ (at your option) any later version.
  ~
  ~ MTG Familiar is distributed in the hope that it will be useful,
  ~ but WITHOUT ANY WARRANTY; without even the implied warranty of
  ~ MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  ~ GNU General Public License for more details.
  ~
  ~ You should have received a copy of the GNU General Public License
  ~ along with MTG Familiar.  If not, see <http://www.gnu.org/licenses/>.
  -->

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@id/dialog_layout_root"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <LinearLayout
        style="@style/forty_eight"
        android:layout_width="match_parent">

        <EditText
            android:id="@+id/traderDialogNumber"
            android:layout_width="48dp"
            android:layout_height="match_parent"
            android:ems="10"
            android:gravity="center"
            android:inputType="number"
            android:maxLength="2"
            android:selectAllOnFocus="true"
            android:importantForAutofill="no" />

        <EditText
            android:id="@+id/traderDialogPrice"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:gravity="center"
            android:inputType="numberDecimal"
            android:selectAllOnFocus="true"
            android:text="@string/default_price"
            android:importantForAutofill="no" />


        <LinearLayout
            android:id="@+id/checkbox_layout"
            android:layout_width="48dp"
            android:layout_height="match_parent"
            android:gravity="center">

            <CheckBox
                android:id="@+id/traderDialogFoil"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:button="@drawable/btn_check_foil"
                android:gravity="center" />
        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        style="@android:style/Holo.ButtonBar"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/traderDialogRemove"
            style="?android:attr/buttonBarButtonStyle"

            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/trader_edit_dialog_remove"
            android:textStyle="bold" />

        <Button
            android:id="@+id/traderDialogResetPrice"
            style="?android:attr/buttonBarButtonStyle"

            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/trader_edit_dialog_reset_price"
            android:textStyle="bold" />
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:background="?attr/color_drawer_divider_item" />

    <LinearLayout
        style="@android:style/Holo.ButtonBar"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/traderDialogChangeSet"
            style="?android:attr/buttonBarButtonStyle"

            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/card_view_change_set"
            android:textStyle="bold" />

        <Button
            android:id="@+id/traderDialogInfo"
            style="?android:attr/buttonBarButtonStyle"

            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/trader_edit_dialog_info"
            android:textStyle="bold" />
    </LinearLayout>
</LinearLayout>